force-app/main/default/objects/Lead/fields/Nurture_Status__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Status__c</fullName>
    <label>Nurture Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Needs Reassignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>