force-app/main/default/objects/Lead/fields/Office_Owner1__c.field-meta.xml
<CustomField>
    <fullName>Office_Owner1__c</fullName>
    <label>Office Owner</label>
    <length>64</length>
    <type>Text</type>
</CustomField>