force-app/main/default/objects/Lead/fields/Past_Ownera__c.field-meta.xml
<CustomField>
    <fullName>Past_Ownera__c</fullName>
    <label>Past Ownera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>