force-app/main/default/objects/Lead/fields/Payments_L1__c.field-meta.xml
<CustomField>
    <fullName>Payments_L1__c</fullName>
    <label>Payments L1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>