force-app/main/default/objects/Lead/fields/Payments_L2__c.field-meta.xml
<CustomField>
    <fullName>Payments_L2__c</fullName>
    <label>Payments L2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>