force-app/main/default/objects/Lead/fields/Personal_Consumer_Debt__c.field-meta.xml
<CustomField>
    <fullName>Personal_Consumer_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Debt</label>
    <type>Checkbox</type>
</CustomField>