force-app/main/default/objects/Lead/fields/Personalized_SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>Personalized_SMS_Message__c</fullName>
    <label>Personalized SMS Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>