force-app/main/default/objects/Lead/fields/PhoneBurner__Attempted_Calls__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__Attempted_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Attempted Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>