force-app/main/default/objects/Lead/fields/PhoneBurner__Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__Last_Attempt__c</fullName>
    <label>Last Attempt</label>
    <type>DateTime</type>
</CustomField>