force-app/main/default/objects/Lead/fields/Positive_Other__c.field-meta.xml
<CustomField>
    <fullName>Positive_Other__c</fullName>
    <label>Positive/Other</label>
    <length>200</length>
    <type>Text</type>
</CustomField>