force-app/main/default/objects/Lead/fields/Pre_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deal_Status__c</fullName>
    <label>Pre Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOCS IN</fullName>
            </value>
            <value>
                <fullName>Dupicate</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>ENROLLED WITH COMPETITOR - NOT SETTLED OUT</fullName>
            </value>
            <value>
                <fullName>ENROLLED WITH COMPETITOR - SETTLED OUT</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>LEGACY</fullName>
            </value>
            <value>
                <fullName>NQ - AFFORDABILITY</fullName>
            </value>
            <value>
                <fullName>NQ - BALANCE / PAYMENTS</fullName>
            </value>
            <value>
                <fullName>NQ - OTHER</fullName>
            </value>
            <value>
                <fullName>ATTEMPTING</fullName>
                <label>↗️ ATTEMPTING</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
                <label>⏩Transfer</label>
            </value>
            <value>
                <fullName>FUTURE FOLLOW UP</fullName>
                <label>⏳ FUTURE FOLLOW UP</label>
            </value>
            <value>
                <fullName>INVALID</fullName>
                <label>❌ INVALID</label>
            </value>
            <value>
                <fullName>Funding</fullName>
                <label>🏦Funding</label>
            </value>
            <value>
                <fullName>NOT INTERESTED - (SEEKING FUNDING)</fullName>
                <label>💰🚫 NOT INTERESTED - (SEEKING FUNDING)</label>
            </value>
            <value>
                <fullName>Reduced pays with Creditor</fullName>
                <label>💳🔽 Reduced pays with Creditor</label>
            </value>
            <value>
                <fullName>NOT INTERESTED - (HAS DEBT)</fullName>
                <label>💸🚫 NOT INTERESTED - (HAS DEBT)</label>
            </value>
            <value>
                <fullName>DOCS IN - REOPEN</fullName>
                <label>📂🔄 DOCS IN - REOPEN</label>
            </value>
            <value>
                <fullName>APPOINTMENT SET</fullName>
                <label>📅 APPOINTMENT SET</label>
            </value>
            <value>
                <fullName>Waiting On Docs</fullName>
                <label>📑⏳ WAITING ON DOCS</label>
            </value>
            <value>
                <fullName>FOLLOW UP</fullName>
                <label>🔄 FOLLOW UP</label>
            </value>
            <value>
                <fullName>DNC</fullName>
                <label>🚫 DNC</label>
            </value>
            <value>
                <fullName>NOT INTERESTED</fullName>
                <label>🚫 NOT INTERESTED</label>
            </value>
            <value>
                <fullName>NEW LEAD</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>🟢🆕 NEW LEAD</label>
            </value>
            <value>
                <fullName>⏩⏩ AI Transfer</fullName>
            </value>
            <value>
                <fullName>BAD NUMBER</fullName>
            </value>
            <value>
                <fullName>Invalid lead</fullName>
                <isActive>false</isActive>
                <label>Invalid lead</label>
            </value>
            <value>
                <fullName>NURTURE - AP</fullName>
                <isActive>false</isActive>
                <label>NURTURE - AP</label>
            </value>
            <value>
                <fullName>NURTURE - Funding</fullName>
                <isActive>false</isActive>
                <label>NURTURE - Funding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>