force-app/main/default/objects/Lead/fields/Pre_Deal_Statuses_DC__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deal_Statuses_DC__c</fullName>
    <label>Pre Deal Statuses DC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned - not contacted</fullName>
                <default>true</default>
                <label>Assigned - not contacted</label>
            </value>
            <value>
                <fullName>Attempting - 1st round</fullName>
            </value>
            <value>
                <fullName>Attempting - 2nd round</fullName>
            </value>
            <value>
                <fullName>Attempting - 3rd round</fullName>
            </value>
            <value>
                <fullName>Attempting - 4th round</fullName>
            </value>
            <value>
                <fullName>Attempting - 5th round</fullName>
            </value>
            <value>
                <fullName>Attempting - 6th round</fullName>
            </value>
            <value>
                <fullName>Attempting - 7th round</fullName>
            </value>
            <value>
                <fullName>Attempting - 8th round</fullName>
            </value>
            <value>
                <fullName>Attempting - 9th round</fullName>
            </value>
            <value>
                <fullName>Attempting - no response</fullName>
            </value>
            <value>
                <fullName>Follow Up - didn&apos;t qualify yet</fullName>
            </value>
            <value>
                <fullName>Follow Up - partially qualified</fullName>
            </value>
            <value>
                <fullName>Follow Up - missed follow up</fullName>
            </value>
            <value>
                <fullName>Follow Up - future</fullName>
            </value>
            <value>
                <fullName>Follow Up - no response</fullName>
            </value>
            <value>
                <fullName>Not Interested - seeking funding</fullName>
            </value>
            <value>
                <fullName>Not Interested - has mca debt</fullName>
            </value>
            <value>
                <fullName>Not Interested - already in debt program</fullName>
            </value>
            <value>
                <fullName>Not Interested - reduced with lenders directly</fullName>
            </value>
            <value>
                <fullName>Not Interested - already in debt program (settled)</fullName>
            </value>
            <value>
                <fullName>Not Interested - already in debt program (not settled)</fullName>
            </value>
            <value>
                <fullName>Not Interested - no hardship</fullName>
            </value>
            <value>
                <fullName>Not Interested - other</fullName>
            </value>
            <value>
                <fullName>Not Qualified - no debt</fullName>
            </value>
            <value>
                <fullName>Not Qualified - little/no revenue</fullName>
            </value>
            <value>
                <fullName>Not Qualified - has business debt (not mca)</fullName>
            </value>
            <value>
                <fullName>Not Qualified - total debt less than minimum</fullName>
            </value>
            <value>
                <fullName>Not Qualified - total payments less than minimum</fullName>
            </value>
            <value>
                <fullName>Not Qualified - other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>