force-app/main/default/objects/Lead/fields/Pre_Qualified_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified_Weekly_Payment__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Qualified Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>