force-app/main/default/objects/Lead/fields/QRDC_A__c.field-meta.xml
<CustomField>
    <fullName>QRDC_A__c</fullName>
    <label>QRDC A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>