force-app/main/default/objects/Lead/fields/QRDC_B__c.field-meta.xml
<CustomField>
    <fullName>QRDC_B__c</fullName>
    <label>QRDC B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>