force-app/main/default/objects/Lead/fields/QuickNotes__c.field-meta.xml
<CustomField>
    <fullName>QuickNotes__c</fullName>
    <label>QuickNotes</label>
    <type>TextArea</type>
</CustomField>