force-app/main/default/objects/Lead/fields/Referrer_Source__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Source__c</fullName>
    <label>Referrer Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>