force-app/main/default/objects/Lead/fields/Rotation_List__c.field-meta.xml
<CustomField>
    <fullName>Rotation_List__c</fullName>
    <label>Rotation List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not available</fullName>
                <label>⬛Not available</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <label>🚫❌Not Interested</label>
            </value>
            <value>
                <fullName>Do not call</fullName>
                <label>📵🚫Do not call</label>
            </value>
            <value>
                <fullName>Connected</fullName>
                <label>🔗✅Connected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>