force-app/main/default/objects/Lead/fields/Round_Robin_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Assignment_Date__c</fullName>
    <description>Tracks when the lead was assigned via round-robin</description>
    <inlineHelpText>Date and time when this lead was assigned through the round-robin process</inlineHelpText>
    <label>Round Robin Assignment Date</label>
    <type>DateTime</type>
</CustomField>