force-app/main/default/objects/Lead/fields/RR_AP_DV_Diamond__c.field-meta.xml
<CustomField>
    <fullName>RR_AP_DV_Diamond__c</fullName>
    <label>RR AP DV Diamond</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>