force-app/main/default/objects/Lead/fields/RR_Cherry_EDD_AR2__c.field-meta.xml
<CustomField>
    <fullName>RR_Cherry_EDD_AR2__c</fullName>
    <label>RR Cherry EDD AR2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>