force-app/main/default/objects/Lead/fields/RR_DlglApp__c.field-meta.xml
<CustomField>
    <fullName>RR_DlglApp__c</fullName>
    <label>RR DlglApp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>