force-app/main/default/objects/Lead/fields/RR_EDD_FB__c.field-meta.xml
<CustomField>
    <fullName>RR_EDD_FB__c</fullName>
    <label>RR EDD FB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>