force-app/main/default/objects/Lead/fields/RR_EDD_JJ_Legal__c.field-meta.xml
<CustomField>
    <fullName>RR_EDD_JJ_Legal__c</fullName>
    <label>RR EDD JJ Legal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>