force-app/main/default/objects/Lead/fields/RR_Everyday_Cherry__c.field-meta.xml
<CustomField>
    <fullName>RR_Everyday_Cherry__c</fullName>
    <label>RR Everyday Cherry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>