force-app/main/default/objects/Lead/fields/RR_Marketing_Debtifi__c.field-meta.xml
<CustomField>
    <fullName>RR_Marketing_Debtifi__c</fullName>
    <label>RR Marketing Debtifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>