force-app/main/default/objects/Lead/fields/RR_Marketing_Lead_DC_Counter__c.field-meta.xml
<CustomField>
    <fullName>RR_Marketing_Lead_DC_Counter__c</fullName>
    <label>RR Marketing Lead DC Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>