force-app/main/default/objects/Lead/fields/RR_Marketing_QRMCA__c.field-meta.xml
<CustomField>
    <fullName>RR_Marketing_QRMCA__c</fullName>
    <label>RR Marketing QRMCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>