force-app/main/default/objects/Lead/fields/RR_NY_legal_Scaper_Debtifi__c.field-meta.xml
<CustomField>
    <fullName>RR_NY_legal_Scaper_Debtifi__c</fullName>
    <label>RR NY legal Scaper Debtifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>