force-app/main/default/objects/Lead/fields/RR_Quiz_QRMCA__c.field-meta.xml
<CustomField>
    <fullName>RR_Quiz_QRMCA__c</fullName>
    <label>RR Quiz QRMCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>