force-app/main/default/objects/Lead/fields/RR_RTC_Debtifi__c.field-meta.xml
<CustomField>
    <fullName>RR_RTC_Debtifi__c</fullName>
    <label>RR RTC Debtifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>