force-app/main/default/objects/Lead/fields/RR_ZAP_YP__c.field-meta.xml
<CustomField>
    <fullName>RR_ZAP_YP__c</fullName>
    <label>RR ZAP YP Debtifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>