force-app/main/default/objects/Lead/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <description>Sales office</description>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Office</label>
    <type>Text</type>
</CustomField>