force-app/main/default/objects/Lead/fields/Sales_Office_Ref__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Ref__c</fullName>
    <label>Sales Office Ref</label>
    <length>212</length>
    <type>Text</type>
</CustomField>