force-app/main/default/objects/Lead/fields/Send_QUIZ__c.field-meta.xml
<CustomField>
    <fullName>Send_QUIZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send QUIZ</label>
    <type>Checkbox</type>
</CustomField>