force-app/main/default/objects/Lead/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>