force-app/main/default/objects/Lead/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <inlineHelpText>Blast Info</inlineHelpText>
    <label>Tag</label>
    <length>200</length>
    <type>Text</type>
</CustomField>