force-app/main/default/objects/Lead/fields/talkdesk__Count__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>