force-app/main/default/objects/Lead/fields/Tax_Debt__c.field-meta.xml
<CustomField>
    <fullName>Tax_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Debt</label>
    <type>Checkbox</type>
</CustomField>