force-app/main/default/objects/Lead/fields/Time_Zone_c__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_c__c</fullName>
    <label>Time Zone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>