force-app/main/default/objects/Lead/fields/TwilioSF__Last_Message_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Last_Message_Status_Date__c</fullName>
    <label>Last Message Status Date</label>
    <type>DateTime</type>
</CustomField>