force-app/main/default/objects/Lead/fields/TwilioSF__Unformatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Unformatted_Phone__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>DEPRECATED Unformatted Phone</label>
    <type>Text</type>
</CustomField>