force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Inbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text Response</fullName>
            </value>
            <value>
                <fullName>Email Response</fullName>
            </value>
            <value>
                <fullName>Email Call-In</fullName>
            </value>
            <value>
                <fullName>Form</fullName>
            </value>
            <value>
                <fullName>Consumer Call-In</fullName>
            </value>
            <value>
                <fullName>Text Call-In</fullName>
            </value>
            <value>
                <fullName>Call-In</fullName>
            </value>
            <value>
                <fullName>Adam - Call in</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Witzy AI Call in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>